updated the encoder training protocol

--- a/encoder_training.ipynb
+++ b/encoder_training.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -45,16 +45,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<torch._C.Generator at 0x7fcbcd94a810>"
+       "<torch._C.Generator at 0x7ff3d47fa310>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,18 +146,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cbe794463bea4474a53fcae56f3eef43",
+       "model_id": "6c8603b527d24abdbdd4203975a6fa4e",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "  0%|          | 0/1000 [00:00<?, ?it/s]"
+       "  0%|          | 0/2000 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -167,32 +167,52 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "122.67446354031563\n",
-      "40.33694891631603\n",
-      "31.494222169741988\n",
-      "28.871540179476142\n",
-      "25.402457566931844\n",
-      "22.750938883051276\n",
-      "22.456682803109288\n",
-      "21.127694809809327\n",
-      "21.232198741286993\n",
-      "20.538506980985403\n",
-      "19.514559488743544\n",
-      "22.169631984084845\n",
-      "19.349598207045346\n",
-      "21.001481267623603\n",
-      "18.17738651880063\n",
-      "16.379891225136817\n",
-      "17.220197728835046\n",
-      "16.949304280802608\n",
-      "15.704042505007237\n",
-      "15.881353326374665\n",
-      "17.898858904023655\n"
+      "Epoch : 1, Loss : 123.44415724277496\n",
+      "Epoch : 50, Loss : 37.903389632701874\n",
+      "Epoch : 100, Loss : 29.904005233198404\n",
+      "Epoch : 150, Loss : 27.137642059475183\n",
+      "Epoch : 200, Loss : 25.28517533838749\n",
+      "Epoch : 250, Loss : 22.734359480440617\n",
+      "Epoch : 300, Loss : 23.16416674107313\n",
+      "Epoch : 350, Loss : 21.585824821144342\n",
+      "Epoch : 400, Loss : 20.67875083349645\n",
+      "Epoch : 450, Loss : 19.797064126469195\n",
+      "Epoch : 500, Loss : 20.04247446358204\n",
+      "Epoch : 550, Loss : 21.442574568092823\n",
+      "Epoch : 600, Loss : 18.107055198401213\n",
+      "Epoch : 650, Loss : 18.24462049547583\n",
+      "Epoch : 700, Loss : 17.85005822777748\n",
+      "Epoch : 750, Loss : 16.584587091914727\n",
+      "Epoch : 800, Loss : 17.247497127042152\n",
+      "Epoch : 850, Loss : 18.707229901105165\n",
+      "Epoch : 900, Loss : 16.460101085714996\n",
+      "Epoch : 950, Loss : 16.243264745222405\n",
+      "Epoch : 1000, Loss : 15.60648980224505\n",
+      "Epoch : 1050, Loss : 15.752383912913501\n",
+      "Epoch : 1100, Loss : 14.845929754083045\n",
+      "Epoch : 1150, Loss : 15.181890428997576\n",
+      "Epoch : 1200, Loss : 14.693347927874129\n",
+      "Epoch : 1250, Loss : 14.678394432645291\n",
+      "Epoch : 1300, Loss : 15.329847648157738\n",
+      "Epoch : 1350, Loss : 13.902005030791315\n",
+      "Epoch : 1400, Loss : 15.125287409187877\n",
+      "Epoch : 1450, Loss : 14.46703355293721\n",
+      "Epoch : 1500, Loss : 14.829718600958586\n",
+      "Epoch : 1550, Loss : 13.56233622005675\n",
+      "Epoch : 1600, Loss : 16.62151077762246\n",
+      "Epoch : 1650, Loss : 14.047725288430229\n",
+      "Epoch : 1700, Loss : 13.803011132404208\n",
+      "Epoch : 1750, Loss : 13.271346624009311\n",
+      "Epoch : 1800, Loss : 12.642164145596325\n",
+      "Epoch : 1850, Loss : 12.91417735713003\n",
+      "Epoch : 1900, Loss : 13.36130534322001\n",
+      "Epoch : 1950, Loss : 13.306995622813702\n",
+      "Epoch : 2000, Loss : 13.721718820626847\n"
      ]
     }
    ],
    "source": [
-    "num_iterations = 1000\n",
+    "num_iterations = 2000\n",
     "cuda = check_cuda()\n",
     "if cuda:\n",
     "  gfa_Encoder = gfa_Encoder.cuda()\n",
