--- a/encoder_training.ipynb
+++ b/encoder_training.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
     {
      "data": {
       "text/plain": [
-       "<torch._C.Generator at 0x7ff3d47fa310>"
+       "<torch._C.Generator at 0x7fe3b019e350>"
       ]
      },
      "execution_count": 3,
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
