--- a/hardness_pred_representation.ipynb
+++ b/hardness_pred_representation.ipynb
@@ -4,18 +4,10 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/noether/s0/aqd5773/anaconda3/envs/representations/lib/python3.10/site-packages/tqdm/auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from modules.encoder import Encoder, Identity"
+    "from modules.encoder import Encoder, Identity\n",
+    "from modules.function import get_hardness"
    ]
   },
   {
