--- a/encoder_training.ipynb
+++ b/encoder_training.ipynb
@@ -309,7 +309,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.4 ('compare_representations': conda)",
+   "display_name": "Python 3.10.4 ('representations': conda)",
    "language": "python",
    "name": "python3"
   },
@@ -328,7 +328,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "8a1ad9b44374217f284defa8f2b445ec28c1fb70a22743f64b8c91885b8a0eca"
+    "hash": "5d6d4f329abd04bfe6379b099819ba9ed35c0bee691259b7aa14222222f8ecb9"
    }
   }
  },
