1d encoder trained and additional features added

--- a/hardness_representation_compare.ipynb
+++ b/hardness_representation_compare.ipynb
@@ -2,12 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "from modules.representation_schemes import enc1d_features, get_PTR_features"
+    "from modules.representation_schemes import enc1d_features, get_PTR_features\n",
+    "from sklearn.decomposition import PCA"
    ]
   },
   {
@@ -59,7 +60,8 @@
     }
    ],
    "source": [
-    "get_PTR_features(comps)[0].shape"
+    "pca = PCA()\n",
+    "pca"
    ]
   },
   {
