10-fold cross validation results

--- a/hardness_representation_compare.ipynb
+++ b/hardness_representation_compare.ipynb
@@ -2,13 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "from modules.representation_schemes import enc1d_features, get_PTR_features\n",
-    "from sklearn.decomposition import PCA"
+    "from sklearn.decomposition import PCA\n",
+    "import pickle"
    ]
   },
   {
@@ -25,43 +26,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(384,)"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "enc1d_features(comps,'pettifor')[0].shape"
+    "ptr_dataset = 'Files_from_GTDL_paper/dataset_PTR.txt'\n",
+    "with open(ptr_dataset,'rb') as fid:\n",
+    "    test = pickle.load(fid)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(256,)"
+       "(16250, 1, 9, 18)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pca = PCA()\n",
-    "pca"
+    "test[0].shape"
    ]
   },
   {
