element selection for leave-one-out tests

--- a/notebooks/1c_transfer_learning_yield_strength.ipynb
+++ b/notebooks/1c_transfer_learning_yield_strength.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,30 +16,238 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle\n",
+    "import json\n",
     "import pandas as pd\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "from sklearn.model_selection import cross_validate\n",
+    "from sklearn.model_selection import KFold\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.decomposition import PCA\n",
     "from modules.representation_schemes import enc1d_features, get_PTR_features, get_vectorized_featues, properties_from_comp\n",
     "from modules.model_select import get_scoring_dict, model_pipeline"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "ys_df_loc = 'dataset/yield_strength.csv'\n",
-    "ys_df = pd.read_csv(ys_df_loc)\n",
+    "ys_df = pd.read_csv(ys_df_loc, index_col=0)\n",
     "comps = ys_df['Composition'].values\n",
     "process = ys_df['As-cast/other'].values.reshape(-1,1)\n",
     "phase = ys_df['Single/MultiPhase'].values\n",
     "single_phase = pd.get_dummies(phase).values[:,1].reshape(-1,1)\n",
     "temp = ys_df['Temperature (Celcius)'].values.reshape(-1,1)\n",
-    "y = ys_df['Yield Strength'].values"
+    "y = ys_df['Yield Strength'].values\n",
+    "samples_per_bin, bins, = np.histogram(ys_df['Yield Strength'], bins=np.arange(100,1000,100)) \n",
+    "min_bin_size = samples_per_bin.min()\n",
+    "n_bins = len(samples_per_bin)\n",
+    "ys_df['bin_name'] = np.digitize(ys_df['Yield Strength'].values,bins)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('misc/pca_components.pkl','rb') as fid:\n",
+    "    component_dict = pickle.load(fid)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Composition</th>\n",
+       "      <th>As-cast/other</th>\n",
+       "      <th>Single/MultiPhase</th>\n",
+       "      <th>Temperature (Celcius)</th>\n",
+       "      <th>Yield Strength</th>\n",
+       "      <th>bin_name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Al0.25MoNbTiV</td>\n",
+       "      <td>1</td>\n",
+       "      <td>S</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>1250.0</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Al0.25NbTaTiV</td>\n",
+       "      <td>1</td>\n",
+       "      <td>S</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>1330.0</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Al0.25NbTaTiZr</td>\n",
+       "      <td>0</td>\n",
+       "      <td>M</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>1745.0</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Al0.25NbTaTiZr</td>\n",
+       "      <td>0</td>\n",
+       "      <td>M</td>\n",
+       "      <td>1000.0</td>\n",
+       "      <td>366.0</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Al0.2MoTaTiV</td>\n",
+       "      <td>1</td>\n",
+       "      <td>S</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>1021.0</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>324</th>\n",
+       "      <td>NbTiVZr</td>\n",
+       "      <td>0</td>\n",
+       "      <td>M</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>1105.0</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>325</th>\n",
+       "      <td>NbTiVZr</td>\n",
+       "      <td>0</td>\n",
+       "      <td>M</td>\n",
+       "      <td>1000.0</td>\n",
+       "      <td>58.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>326</th>\n",
+       "      <td>NbTiVZr</td>\n",
+       "      <td>0</td>\n",
+       "      <td>M</td>\n",
+       "      <td>800.0</td>\n",
+       "      <td>187.0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>327</th>\n",
+       "      <td>NbTiVZr</td>\n",
+       "      <td>0</td>\n",
+       "      <td>M</td>\n",
+       "      <td>600.0</td>\n",
+       "      <td>834.0</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>328</th>\n",
+       "      <td>NbTiVZr</td>\n",
+       "      <td>1</td>\n",
+       "      <td>S</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>1104.0</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>298 rows × 6 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        Composition  As-cast/other Single/MultiPhase  Temperature (Celcius)  \\\n",
+       "0     Al0.25MoNbTiV              1                 S                   25.0   \n",
+       "1     Al0.25NbTaTiV              1                 S                   25.0   \n",
+       "2    Al0.25NbTaTiZr              0                 M                   25.0   \n",
+       "3    Al0.25NbTaTiZr              0                 M                 1000.0   \n",
+       "4      Al0.2MoTaTiV              1                 S                   25.0   \n",
+       "..              ...            ...               ...                    ...   \n",
+       "324         NbTiVZr              0                 M                   25.0   \n",
+       "325         NbTiVZr              0                 M                 1000.0   \n",
+       "326         NbTiVZr              0                 M                  800.0   \n",
+       "327         NbTiVZr              0                 M                  600.0   \n",
+       "328         NbTiVZr              1                 S                   25.0   \n",
+       "\n",
+       "     Yield Strength  bin_name  \n",
+       "0            1250.0         9  \n",
+       "1            1330.0         9  \n",
+       "2            1745.0         9  \n",
+       "3             366.0         3  \n",
+       "4            1021.0         9  \n",
+       "..              ...       ...  \n",
+       "324          1105.0         9  \n",
+       "325            58.0         0  \n",
+       "326           187.0         1  \n",
+       "327           834.0         8  \n",
+       "328          1104.0         9  \n",
+       "\n",
+       "[298 rows x 6 columns]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "code",
