changed model locations and added new figures

--- a/notebooks/0a_encoder_training.ipynb
+++ b/notebooks/0a_encoder_training.ipynb
@@ -158,26 +158,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(6218, 6178)"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "count_parameters(EncoderDNN(103,3,42,1)),count_parameters(Encoder1D(1,1))"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
    "outputs": [
@@ -669,8 +649,8 @@
     "            train_loss += e_error.cpu().item()\n",
     "        if iter == 0 or (iter + 1) % log_interval == 0:  \n",
     "            print('Epoch : {}, Loss : {}'.format(iter+1,train_loss))\n",
-    "\n",
-    "    joblib.dump(gfa_Encoder,os.path.join(saveloc,'Encoder2D_ptr_fold{}.pt'.format(k)))\n",
+    "    model_scripted = torch.jit.script(gfa_Encoder.cpu())\n",
+    "    model_scripted.save(os.path.join(saveloc,'Encoder2D_ptr_fold{}.pt'.format(k)))\n",
     "    if X_test.dtype != torch.float32:\n",
     "        X_test = torch.from_numpy(X_test)\n",
     "        p_test = torch.from_numpy(p_test)\n",
@@ -685,9 +665,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'metrics_list' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m/noether/s0/aqd5773/representations/notebooks/0a_encoder_training.ipynb Cell 10\u001b[0m in \u001b[0;36m<cell line: 2>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell://ssh-remote%2Bnoether.matse.psu.edu/noether/s0/aqd5773/representations/notebooks/0a_encoder_training.ipynb#X12sdnNjb2RlLXJlbW90ZQ%3D%3D?line=0'>1</a>\u001b[0m sup_dict \u001b[39m=\u001b[39m {}\n\u001b[0;32m----> <a href='vscode-notebook-cell://ssh-remote%2Bnoether.matse.psu.edu/noether/s0/aqd5773/representations/notebooks/0a_encoder_training.ipynb#X12sdnNjb2RlLXJlbW90ZQ%3D%3D?line=1'>2</a>\u001b[0m sup_dict[\u001b[39m'\u001b[39m\u001b[39mptr\u001b[39m\u001b[39m'\u001b[39m] \u001b[39m=\u001b[39m metrics_list\n\u001b[1;32m      <a href='vscode-notebook-cell://ssh-remote%2Bnoether.matse.psu.edu/noether/s0/aqd5773/representations/notebooks/0a_encoder_training.ipynb#X12sdnNjb2RlLXJlbW90ZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mjson\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell://ssh-remote%2Bnoether.matse.psu.edu/noether/s0/aqd5773/representations/notebooks/0a_encoder_training.ipynb#X12sdnNjb2RlLXJlbW90ZQ%3D%3D?line=3'>4</a>\u001b[0m \u001b[39mwith\u001b[39;00m \u001b[39mopen\u001b[39m(\u001b[39m'\u001b[39m\u001b[39mresults/representation_stats.json\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mw\u001b[39m\u001b[39m'\u001b[39m) \u001b[39mas\u001b[39;00m f:\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'metrics_list' is not defined"
+     ]
+    }
+   ],
    "source": [
     "sup_dict = {}\n",
     "sup_dict['ptr'] = metrics_list\n",
@@ -698,7 +690,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "with open('results/representation_stats.json', 'r') as f:\n",
+    "    sup_dict = json.load(f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "metrics_list = sup_dict['ptr']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -723,7 +735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -732,26 +744,20 @@
        "'saved_models/best_models/2DEncoder_PTR.pt'"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "import shutil\n",
+    "saveloc = 'saved_models/Encoders/PTR'\n",
     "best_model_loc = 'saved_models/best_models'\n",
     "if not os.path.exists(best_model_loc):\n",
     "    os.makedirs(f'{best_model_loc}')\n",
     "best_model_name = sorted(os.listdir(saveloc))[best_ind]\n",
     "shutil.copy(os.path.join(saveloc,best_model_name), os.path.join(best_model_loc,'2DEncoder_PTR.pt')) "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
