added vizualization notebook

--- a/notebooks/2a_generalizability_gfa.ipynb
+++ b/notebooks/2a_generalizability_gfa.ipynb
@@ -392,7 +392,7 @@
     "            p = p.cuda()\n",
     "    with torch.no_grad():\n",
     "        y_pred = model(X,p).to('cpu').detach().numpy()\n",
-    "    predicted_dict[method] = y_pred\n"
+    "    predicted_dict[method] = y_pred"
    ]
   },
   {
@@ -473,7 +473,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.colorbar.Colorbar at 0x7f5d8ce318a0>"
+       "<matplotlib.colorbar.Colorbar at 0x7f57980d57b0>"
       ]
      },
      "execution_count": 9,
@@ -534,6 +534,28 @@
     "ax1.spines['bottom'].set_visible(True)\n",
     "ax1.spines['left'].set_visible(True)\n",
     "plt.colorbar()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "results_dict_loc = 'results/results.json'\n",
+    "if os.path.exists(results_dict_loc):\n",
+    "    with open(results_dict_loc,'r') as fid:\n",
+    "        sup_results_dict = json.load(fid)\n",
+    "    temp_dict = {}\n",
+    "    temp_dict['mcnemar_gfa'] = {'names' : names, 'p_vals' : zero.tolist()}\n",
+    "    sup_results_dict = sup_results_dict|temp_dict\n",
+    "    with open(results_dict_loc,'w') as fid:\n",
+    "        json.dump(sup_results_dict,fid)\n",
+    "else:\n",
+    "    sup_results_dict = {}\n",
+    "    sup_results_dict['mcnemar_gfa'] = {'names' : names, 'p_vals' : zero.tolist()}\n",
+    "    with open(results_dict_loc,'w') as fid:\n",
+    "        json.dump(sup_results_dict,fid)\n"
    ]
   },
   {
