added notebooks for generalizability tests

--- a/notebooks/1a_transfer_learning_phase.ipynb
+++ b/notebooks/1a_transfer_learning_phase.ipynb
@@ -124,7 +124,7 @@
     "fig.text(0.5, -0.04, 'number of components', ha='center', fontsize=14)\n",
     "fig.text(-0.04, 0.5, 'cumulative explained variance', va='center', rotation='vertical', fontsize=14)\n",
     "plt.tight_layout()\n",
-    "with open('misc/pca_components.pkl','wb') as fid:\n",
+    "with open('misc/pca_components_phase.pkl','wb') as fid:\n",
     "    pickle.dump(component_dict,fid)\n",
     "with open('misc/pca_results_phase.json','w') as fid:\n",
     "    json.dump(pca_dict,fid)"
