--- a/notebooks/1c_transfer_learning_yield_strength.ipynb
+++ b/notebooks/1c_transfer_learning_yield_strength.ipynb
@@ -43,7 +43,7 @@
     "from modules.model_select import get_scoring_dict, model_pipeline, corr, rmse\n",
     "from sklearn.ensemble import RandomForestRegressor\n",
     "from sklearn.pipeline import Pipeline\n",
-    "from sklearn.preprocessing import StandardScaler"
+    "from sklearn.preprocessing import StandardScaler\n"
    ]
   },
   {
