consolidated DNN/CNN training into one notebook

--- a/notebooks/2a_generalizability_gfa.ipynb
+++ b/notebooks/2a_generalizability_gfa.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,19 +28,19 @@
     "import numpy as np\n",
     "import json\n",
     "from sklearn.model_selection import KFold\n",
-    "from modules.function import get_elem_count, alt_read_gfa_dataset, PTR, check_cuda, get_metrics, image, pymatgen_comp, special_formatting, data_generator_gfa\n",
+    "from modules.function import get_elem_count, alt_read_gfa_dataset, check_cuda, get_metrics, image, read_gfa_dataset\n",
     "from modules.encoder import Encoder1D, EncoderDNN, Encoder\n",
     "import re\n",
     "import torch.optim as optim\n",
     "from torch.utils.data import DataLoader\n",
     "import tqdm\n",
     "import joblib\n",
-    "from modules.representation_schemes import get_vectorized_featues, get_atomic_number_features, get_pettifor_features, get_modified_pettifor_features, get_random_features, get_random_features_dense, random_order_alpha"
+    "from modules.representation_schemes import get_atomic_number_features, get_pettifor_features, get_modified_pettifor_features, get_random_features, get_random_features_dense, random_order_alpha, get_1D_features_gfa, get_dense_features_gfa"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,84 +78,6 @@
     "count_df.reset_index(inplace=True)\n",
     "count_df.rename({'index':'element',0:'count'}, axis=1, inplace=True)\n",
     "count_df['percent'] = [np.round(count_df.loc[i,'count']/len(comps_gfa)*100,2) for i in range(count_df.shape[0])]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_1D_features_gfa(k:str):\n",
-    "    comp_gfa, y, p = alt_read_gfa_dataset()\n",
-    "    y = np.array(y).reshape(-1,1).astype('float32')\n",
-    "    p = np.array(p).reshape(-1,1).astype('float32')\n",
-    "    if k not in ['atomic','pettifor','mod_pettifor','random']:\n",
-    "        print('Unsupported format')\n",
-    "        return None, None, None\n",
-    "    else:\n",
-    "        if k == 'atomic':\n",
-    "            comp, at_order  = get_atomic_number_features(comp_gfa)\n",
-    "        elif k == 'pettifor':\n",
-    "            comp, _  = get_pettifor_features(comp_gfa)\n",
-    "        elif k == 'mod_pettifor':\n",
-    "            comp, _  = get_modified_pettifor_features(comp_gfa)\n",
-    "        elif k == 'random':\n",
-    "            comp,_ = get_random_features(comp_gfa)\n",
-    "        return comp, y, p\n",
-    "\n",
-    "def get_dense_features_gfa():\n",
-    "    comp_gfa, y, p = alt_read_gfa_dataset()\n",
-    "    y = np.array(y).reshape(-1,1).astype('float32')\n",
-    "    p = np.array(p).reshape(-1,1).astype('float32') \n",
-    "    comp,_ = get_random_features_dense(comp_gfa)\n",
-    "    return comp, y, p\n",
-    "\n",
-    "def get_ptr_features_gfa(gfa_dataset=gfa_dataset):\n",
-    "\n",
-    "    gfa_i=[]\n",
-    "    gfa_a=[]\n",
-    "    gfa_b=[]\n",
-    "    gfa_c=[]\n",
-    "    to_discard = ['Rf','Db','Sg','Bh','Hs']\n",
-    "    for i in  gfa_dataset:\n",
-    "        tx_gfa=re.findall('\\[[a-c]?\\]', i)\n",
-    "        tx1_element=re.findall('[A-Z][a-z]?', i)#[B, Fe, P,No]\n",
-    "        if len(set(tx1_element).intersection(set(to_discard))) == 0:      \n",
-    "            gfa_i.extend(tx_gfa)\n",
-    "            if tx_gfa[0]=='[a]':\n",
-    "                gfa_a.append(gfa_dataset.index(i))\n",
-    "            elif tx_gfa[0]=='[b]':\n",
-    "                gfa_b.append(gfa_dataset.index(i)) \n",
-    "            else:\n",
-    "                gfa_c.append(gfa_dataset.index(i))\n",
-    "        \n",
-    "    gfa_data_form=[]\n",
-    "    gfa_data_form_p = []\n",
-    "    gfa_data_form_b=[]\n",
-    "\n",
-    "#------------------------------------------------------------------------------\n",
-    "#map raw data to 2-D image using PTR\n",
-    "    for i in gfa_a:\n",
-    "        x,p,y = PTR(gfa_dataset[i])\n",
-    "        gfa_data_form=gfa_data_form+x\n",
-    "        gfa_data_form_p = gfa_data_form_p+p\n",
-    "        gfa_data_form_b=gfa_data_form_b+y\n",
-    "    for i in gfa_c:\n",
-    "        x,p,y = PTR(gfa_dataset[i])\n",
-    "        gfa_data_form=gfa_data_form+x\n",
-    "        gfa_data_form_p = gfa_data_form_p+p\n",
-    "        gfa_data_form_b=gfa_data_form_b+y \n",
-    "    for i in gfa_b:\n",
-    "        x,p,y = PTR(gfa_dataset[i])\n",
-    "        gfa_data_form=gfa_data_form+x\n",
-    "        gfa_data_form_p = gfa_data_form_p+p\n",
-    "        gfa_data_form_b=gfa_data_form_b+y\n",
-    "\n",
-    "    X_all = np.array(gfa_data_form).reshape(-1, 1,9, 18).astype('float32') \n",
-    "    y_all = np.array(gfa_data_form_b).reshape(-1,1).astype('float32')\n",
-    "    p_all = np.array(gfa_data_form_p).reshape(-1,1).astype('float32')\n",
-    "    return X_all, y_all, p_all"
    ]
   },
   {
@@ -629,6 +551,61 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.]\n",
+      " [1.]\n",
+      " [0.]\n",
+      " ...\n",
+      " [1.]\n",
+      " [0.]\n",
+      " [1.]]\n",
+      "[[0.]\n",
+      " [1.]\n",
+      " [0.]\n",
+      " ...\n",
+      " [1.]\n",
+      " [0.]\n",
+      " [1.]]\n",
+      "[[0.]\n",
+      " [1.]\n",
+      " [0.]\n",
+      " ...\n",
+      " [1.]\n",
+      " [0.]\n",
+      " [1.]]\n",
+      "[[0.]\n",
+      " [1.]\n",
+      " [0.]\n",
+      " ...\n",
+      " [1.]\n",
+      " [0.]\n",
+      " [1.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "methods = ['dense','atomic','pettifor','mod_pettifor','random','PTR']\n",
+    "results_dict = {}\n",
+    "for method in methods:\n",
+    "    results_dict[method] = {}\n",
+    "    if method == 'dense':\n",
+    "        X, y , p = get_dense_features_gfa()    \n",
+    "    elif method in ['atomic','pettifor','mod_pettifor','random']:\n",
+    "        X,y,p = get_1D_features_gfa(method)    \n",
+    "        print(p) \n",
+    "    elif method == 'PTR':\n",
+    "        X,y,p = read_gfa_dataset()\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 119,
    "metadata": {},
    "outputs": [
@@ -814,7 +791,7 @@
     "    elif method in ['atomic','pettifor','mod_pettifor','random']:\n",
     "        X,y,p = get_1D_features_gfa(method)     \n",
     "    elif method == 'PTR':\n",
-    "        X,y,p = get_ptr_features_gfa()\n",
+    "        X,y,p = read_gfa_dataset()\n",
     "    for k in gfa_gen_dict.keys():\n",
     "        results_dict[method][k] = {}\n",
     "        f1_max = 0\n",
@@ -898,13 +875,6 @@
     "                json.dump(results_dict, f)\n",
     "        "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
