--- a/notebooks/1a_transfer_learning_phase.ipynb
+++ b/notebooks/1a_transfer_learning_phase.ipynb
@@ -944,7 +944,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.4 ('representations': conda)",
+   "display_name": "Python 3.6.15 ('uts_candidates': conda)",
    "language": "python",
    "name": "python3"
   },
@@ -958,12 +958,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.6.15"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "5d6d4f329abd04bfe6379b099819ba9ed35c0bee691259b7aa14222222f8ecb9"
+    "hash": "42db5ec7ccec2731c18589f56f6fbffc4e2d7696fbe9514e7c85537a3f36390a"
    }
   }
  },
