rerun using new models

--- a/notebooks/0_encoder_training.ipynb
+++ b/notebooks/0_encoder_training.ipynb
@@ -75,7 +75,7 @@
    ],
    "source": [
     "np.random.seed(0)\n",
-    "kfold_loc = 'misc/gfa_kfold.pkl'\n",
+    "kfold_loc = 'misc/CV_folds/gfa_kfold.pkl'\n",
     "create_new = False\n",
     "if os.path.exists(kfold_loc) and not create_new:\n",
     "    with open(kfold_loc,'rb') as fid:\n",
