updated the random subsampling notebooks

--- a/notebooks/2a_generalizability_gfa.ipynb
+++ b/notebooks/2a_generalizability_gfa.ipynb
@@ -40,19 +40,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cuda = check_cuda()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
+    "cuda = check_cuda()\n",
     "gfa_dataset_file = 'gfa_dataset.txt'\n",
     "z_row_column_file = 'Z_row_column.txt'\n",
     "element_property_file = 'element_property.txt'\n",
@@ -77,6 +69,13 @@
     "count_df.rename({'index':'element',0:'count'}, axis=1, inplace=True)\n",
     "count_df['percent'] = [np.round(count_df.loc[i,'count']/len(comps_gfa)*100,2) for i in range(count_df.shape[0])]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
